feat(presets): implement preset list get endpoint
