# backend/docs/swagger.json
@@ -349,8 +349,42 @@
                 }
             }
         },
-        "/spi-webhook": {
+        "/service/available-presets": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get full list of available presets",
+                "tags": [
+                    "service"
+                ],
+                "summary": "Get list of presets",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/service.PresetListResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/util.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/spi-webhook": {
+            "post": {
                 "description": "Handle keycloak SPI webhook events",
                 "tags": [
                     "webhook"
@@ -555,6 +589,31 @@
             "properties": {
                 "balance": {
                     "type": "integer"
+                }
+            }
+        },
+        "service.PresetListResponse": {
+            "type": "object",
+            "properties": {
+                "presets": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/service.preset"
+                    }
+                }
+            }
+        },
+        "service.preset": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
